# az_container_app

./: README.md  pyproject.toml
app/: main.py  pyproject.toml
