[tool.poetry]
name = "project1"
version = "0.1.0"
description = ""
authors = ["Shahnawaz1990 <shahnawaz.nazimali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
